--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>cwl-ssq</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.teclan</groupId>
+    <artifactId>teclan-cwl</artifactId>
+    <version>1.0</version>
 
 
     <dependencies>
